@startuml
'https://plantuml.com/class-diagram

'Modifiers:
'hide members
hide empty members

package "Model" #DDDDDD {
    class Game {
        +id: String <<Constructor>>
        +local_player: Player <<Constructor>>
        +board: Board <<Constructor>>
    }

    abstract class Board {
        +mvs: Map<Square, Checker> <<Constructor>>
    }

    class BoardRun {
        +numberOfMoves: Int <<Constructor>>
        +mvsWithoutCapture: Int <<Constructor>>
        +prevCaptureSqr: Square <<Constructor>>
        +turn: Player <<Constructor>>
    }

    class BoardWin {
        +winner: Player <<Constructor>>
    }

    class BoardDraw

    abstract class Checker {
        +player: Player <<Constructor>>
    }

    class Piece

    class King

    enum Player {
        w
        b
    }

    class Square {
        -r: Row <<Constructor>>
        -c: Column <<Constructor>>
        +row: Row
        +column: Column
        +black: Boolean
        +adjacentDiagonalsList: List<Square>
        +diagonalsList: List<Square>
        +upperBackSlash: List<Square>
        +upperSlash: List<Square>
        +lowerBackSlash: List<Square>
        +lowerSlash: List<Square>
        +onFirstRow: Boolean
        +onLastRow: Boolean
    }

    class SquareValues <<(S, Orange) Singleton >>

    class Row {
        -num: Int <<Constructor>>
        +index: Int
        +number: Int
    }

    class RowValues <<(S, Orange) Singleton >>

    class Column {
        -letter: Char <<Constructor>>
        +index: Int
        +symbol: Char
    }

    class ColumnValues <<(S, Orange) Singleton >>

    'Connections:
    Game --> Board
    Game -> Player
    Board <|. BoardRun: "                 "
    Board <|.. BoardWin
    Board <|.. BoardDraw
    Board --> Square
    Board --> Checker
    King o--> Player
    Piece o--> Player
    Checker <|.. Piece
    Checker <|.. King
    Square --> Row
    Square --> Column
    Square *-- SquareValues
    Row *-- RowValues
    Column *-- ColumnValues
}

package "Storage" {
    interface Serializer<T, S> {
        +fun write(obj: T): S
        +fun parse(stream: S): T
    }

    interface Storage<K, T> {
        +suspend fun create(id: K, value: T)
        +suspend fun read(id: K): T?
        +suspend fun update(id: K, value: T)
        +suspend fun delete(id: K)
    }

    class MongoStorage<T> {
        +collectionName: String <<Constructor>>
        +db: CoroutineDatabase <<Constructor>>
        -serializer: Serializer<T, String> <<Constructor>>
    }

    class FileStorage<K, T> {
        -folder: String <<Constructor>>
        -serializer: Serializer<T, String> <<Constructor>>
        -fun path(id: K): String
    }

    class BoardSerializer <<(O, gold)>>

    'class MongoDbAccess <<(O, gold)>>


    'Connections:
    Storage <|.. MongoStorage
    Storage <|.. FileStorage
    Serializer <|. BoardSerializer : "       "
    BoardSerializer --> MongoStorage
    BoardSerializer --> FileStorage
}

package "UI" #EEEEEE {
    class SyntaxError

    class IllegalArgumentException {
        +msg: String <<Constructor>>
    }

    'Connections:
    SyntaxError <|-- IllegalArgumentException
}
@enduml